--- a/codemash/start/app/templates/nav.html
+++ b/codemash/start/app/templates/nav.html
@@ -3,13 +3,13 @@
   <nav class="card-builder-nav" role="navigation">
     <ul>
       <li>
-        <a href="cards">Cards</a>
+        <a ui-sref="cards">Cards</a>
       </li>
       <li>
-        <a href="decks">My Decks</a>
+        <a ui-sref="decks">My Decks</a>
       </li>
       <li>
-        <a href="admin">Admin</a>
+        <a ui-sref="admin">Admin</a>
       </li>
       <li id="search-input">
         <div class="search-bar">
