--- a/codemash/start/app/templates/cards.html
+++ b/codemash/start/app/templates/cards.html
@@ -2,7 +2,7 @@
   <div class="large-12 column">
     <div id="card-filter">
       <ul>
-        <li>
+        <li >
           <a href=""></a>
         </li>
       </ul>
@@ -14,8 +14,8 @@
       <span></span>
     </div>
     <div id="card-book">
-      <div class="card card-animation">
-        <img alt="">
+      <div class="card card-animation" ng-repeat="card in cards">
+        <img alt="{{ card.name }}" src="{{ card.image_url }}" >
       </div>
     </div>
     <div class="page-num">
