--- a/codemash/start/app/templates/detail.html
+++ b/codemash/start/app/templates/detail.html
@@ -1,1 +1,4 @@
-<div class="detail-view"></div>
+<div class="detail-view" ng-show="isDetailState()" ng-click="hide()">
+	   <img ng-src="{{card.image_url}}" />
+        <div class="card-back"></div>
+</div>
