--- a/codemash/start/app/css/animations.css
+++ b/codemash/start/app/css/animations.css
@@ -1,20 +1,32 @@
+/* when an item enters the screen angular gives it this class */
 .card.ng-enter {
-  /*transition: all 0.5s linear;*/
-  /*transform: scale(0.75);*/
-  /*opacity: 0.25;*/
+  transition: all 0.25s linear;
+  transform: scale(0) rotate(-10deg)  translate(-500px, 25px);
+  opacity: 0.25;
 }
 
-/*.card.ng-enter-stagger {
-  transition-delay: 0.1s;
+/* to control staggering you simply tweak these css transition-delay/duration values*/
+.card.ng-enter-stagger {
+  transition-delay: 0.2s;
   transition-duration: 0s;
-}*/
+}
 
+
+/* at the final stage an element receives the active state, the last stage of animation */
 .card.ng-enter-active {
-  /*transform: scale(1);*/
-  /*opacity: 1;*/
+  transform: scale(1);
+  opacity: 1;
+}
+
+.detail-view.ng-enter { 
+  transition: all 0.25s linear;
+  opacity: 0.25;
+}
+.detail-view.ng-enter-active { 
+  opacity: 1;
 }
 
 .detail-view-animation {
-  /*transition: all 0.5s linear;*/
-  /*transform: scale(0.25);*/
+  transition: all 0.5s linear;
+  transform: scale(0.25);
 }
