--- a/codemash/start/app/templates/nav.html
+++ b/codemash/start/app/templates/nav.html
@@ -13,7 +13,12 @@
       </li>
       <li id="search-input">
         <div class="search-bar">
-          <input type="text" id="search-field" placeholder="Search..." />
+          <input type="text" 
+			id="search-field" 
+			placeholder="Search..."
+			ng-model="searchQuery" 
+			ng-change="searchQueryChanged(searchQuery)"
+		  />
         </div>
       </li>
     </ul>
