--- a/codemash/start/app/templates/cards.html
+++ b/codemash/start/app/templates/cards.html
@@ -1,4 +1,4 @@
-<div id="cards" class="row">
+<div id="cards" class="row" blurs-if-state-is-detailed>
   <div class="large-12 column">
     <div id="card-filter">
       <ul>
@@ -36,5 +36,6 @@
       </ul>
     </div>
   </div>
-  <div ui-view></div>
+
 </div>
+  <div ui-view></div>
