--- a/codemash/start/app/css/style.css
+++ b/codemash/start/app/css/style.css
@@ -537,6 +537,10 @@ body:active, a:active {
 .blurred {
   -webkit-filter: blur(3px);
   filter: blur(3px);
+-webkit-filter: blur(5px); /* Prefixed CSS3 blur filters */
+	-moz-filter: blur(5px); 
+
+	
 }
 
 .card-back {
